--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+actix-web = { version = "4.3" }
+serde = { version = "1.0" }
+dotenv = { version = "0.15" }
+futures = { version = "0.3" }
+mongodb = { version = "2.6", default-features = false, features = ["async-std-runtime"] }
